
- Fixed
    Couldn't load tag minecraft:impact_projectiles as it is missing following references: valoria:poisoned_kunai (from main)
    Couldn't load tag valoria:smoke_particle as it is missing following references: valora:infernal_core (from main)

- Added Suspicious Ice generation
- Added Suspicious Iceberg generation

# Changelog v0.6.1
- Now Valoria requires Lodestone
- Various playability changes

- Added Custom Voxel shapes to some blocks
- Added some Recipes
- Added Firefly like particles, spawned in Shadeforest
- Added Particles for Bandages
- Added Shade Blossom
- Added Shade Blossom Bandage
- Added Pots Generation

- Reworked Stone Crusher (A bit)
- Reworked Accessories
- Reworked BlazeReap
- Reworked Bandages
- Decreased amount of bones dropped from Goblins

- ID change of "pick" -> "prospectors_pick"
- Changed spawnables in Valoria dimension

- Fixed Katana's, Scythe's
- Fixed Scythe Attributes
- Fixed infinite use of Katana
- Fixed Gloves rendering
- Fixed Void armor craft recipe

- Resprited Gazers, totems, winglets
- Resprited Bandages
- Resprited Effects

- Changed incompatibility of "Bleeding" enchantment from "Sweeping Edge" to "Sharpness"

- Optimized Gloves code
- Updated mods.toml

# Changelog v0.6

- Optimized Quicksand Fog Rendering
- Optimized CurioItemProperty
- Optimized Infernal Sword
- Optimized Scythe Items
- Optimized Lexicon Page Item
- Optimized Mannequin
- Optimized Weapons abilities

- Added functionality for ALL runes (finally did it lmao)
- Added Jade compat
- Added Compat for Enchantment Descriptions
- Added 2 attributes to Prospectors pick
- Added a new painting The Starry night by Vincent Van Gogh
- Added Entities to vailla tags
- Added cooldown for Phantom
- Added ColorMapping for plants
- Added Flammable to wooden blocks
- Added Ores to forge tags
- Added Shadewood branch
- Added Void Taint
- Added The Valoria Dimension:
    - Added Violet Sprout
    - Added Glow Violet Sprout
    - Added Glowfern
    - Added Voidvine