@@ -1,0 +1,17 @@
+{
+  "values": [
+    "#forge:is_underground",
+    "minecraft:stony_shore",
+    "minecraft:mangrove_swamp",
+    "minecraft:windswept_gravelly_hills",
+    "minecraft:windswept_hills",
+    "minecraft:windswept_forest",
+    "minecraft:meadow",
+    "minecraft:wooded_badlands",
+    "minecraft:jagged_peaks",
+    "minecraft:stony_peaks",
+    "minecraft:ice_spikes",
+    "minecraft:sparse_jungle",
+    "minecraft:dripstone_caves"
+  ]
+}
